--- a/CarApi/CarApi/CarApi.csproj
+++ b/CarApi/CarApi/CarApi.csproj
@@ -6,7 +6,13 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+      <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
 
