--- a/CarApi/DataAccess/DataAccess.csproj
+++ b/CarApi/DataAccess/DataAccess.csproj
@@ -5,12 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
+      <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Models" />
-      <Folder Include="Services" />
+      <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
     </ItemGroup>
 
 </Project>
